backend/jest.txt
PASS tests/integration/signOn.test.js
  √ signOn mutation signs on a person (1316ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        8.773s
Ran all test suites related to changed files.
PASS tests/integration/signOn.test.js
  √ signOn mutation signs on a person (221ms)

Failed to collect coverage from C:\Users\Luke\source\repos\serverless-sailingweb\backend\src\dynamoResolvers\helm.js
ERROR: C:\Users\Luke\source\repos\serverless-sailingweb\backend\src\dynamoResolvers\helm.js: Unexpected token (12:0)

  10 |     }
  11 |     return {newPerson: db.createItem(params)}}
> 12 | }
     | ^
  13 | 
  14 | export const allHelms = (args) => {
  15 |     let params = {
STACK: SyntaxError: C:\Users\Luke\source\repos\serverless-sailingweb\backend\src\dynamoResolvers\helm.js: Unexpected token (12:0)

  10 |     }
  11 |     return {newPerson: db.createItem(params)}}
> 12 | }
     | ^
  13 | 
  14 | export const allHelms = (args) => {
  15 |     let params = {
    at Parser.raise (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:6322:17)
    at Parser.unexpected (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:7638:16)
    at Parser.parseExprAtom (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:8799:20)
    at Parser.parseExprSubscripts (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:8385:23)
    at Parser.parseMaybeUnary (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:8365:21)
    at Parser.parseExprOps (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:8252:23)
    at Parser.parseMaybeConditional (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:8225:23)
    at Parser.parseMaybeAssign (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:8172:21)
    at Parser.parseExpression (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:8120:23)
    at Parser.parseStatementContent (C:\Users\Luke\source\repos\serverless-sailingweb\backend\node_modules\@babel\parser\lib\index.js:9892:23)
Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        8.79s
Ran all test suites related to changed files.
PASS tests/integration/signOn.test.js
  √ signOn mutation signs on a person (202ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        7.843s
Ran all test suites related to changed files.
PASS tests/integration/signOn.test.js
  √ signOn mutation signs on a person (178ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        8.404s
Ran all test suites related to changed files.
PASS tests/integration/signOn.test.js
  √ signOn mutation signs on a person (186ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        8.945s
Ran all test suites related to changed files.
FAIL tests/integration/signOn.test.js
  × signOn mutation signs on a person (59ms)

  ● signOn mutation signs on a person

    TypeError: Cannot read property 'signOn' of undefined

      35 |   })
      36 |   const signOnJson = await signOn.json();
    > 37 |   expect(signOnJson.data.signOn).toEqual(obj)
         |                          ^
      38 |   const response = await fetch('http://localhost:3000/graphql', {
      39 |     method: 'post',
      40 |     body: JSON.stringify({

      at Object.signOn (tests/integration/signOn.test.js:37:26)

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time:        11.235s
Ran all test suites related to changed files.
PASS tests/integration/signOn.test.js
  √ signOn mutation signs on a person (172ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        9.05s
Ran all test suites related to changed files.
PASS tests/integration/signOn.test.js
  √ signOn mutation signs on a person (203ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        9.476s
Ran all test suites related to changed files.
PASS tests/integration/signOn.test.js
  √ signOn mutation signs on a person (255ms)

Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        9.951s
Ran all test suites related to changed files.
